# LLD

Vending_Machine/: CMakeLists.txt  main.cpp
Vending_Machine/Exceptions/: HandleDispenseChangeException.cpp  HandleDispenseChangeException.h  InvalidMoveByUser.cpp  InvalidMoveByUser.h  ProductNotAvailableException.cpp  ProductNotAvailableException.h  SpaceNotAvailableException.cpp  SpaceNotAvailableException.h
Vending_Machine/models/: CoinInsertedState.cpp  CoinInsertedState.h  DispenseState.cpp  DispenseState.h  Inventory.cpp  Inventory.h  NoCoinInsertedState.cpp  NoCoinInsertedState.h  Product.cpp  Product.h  State.cpp  State.h  VendingMachine.cpp  VendingMachine.h
